update projects section

--- a/static/global.css
+++ b/static/global.css
@@ -120,7 +120,8 @@ h2:first-child,
 h3:first-child,
 h4:first-child,
 h5:first-child,
-h6:first-child {
+h6:first-child,
+p:first-child {
 	margin-top: 0;
 }
 
