--- a/static/global.css
+++ b/static/global.css
@@ -70,6 +70,7 @@
 	--layer-container: var(--clr-gray-95);
 	--layer-container-hover: var(--clr-gray-100);
 	--layer-highlight: var(--clr-gray-80);
+	--clr-scrollbar: var(--clr-darker-20);
 	--divider: var(--clr-darker-20);
 	--container-border: none;
 	--container-border-radius: 0.25rem 2rem;
@@ -89,6 +90,7 @@
 	--layer-container: var(--clr-gray-20);
 	--layer-container-hover: var(--clr-gray-25);
 	--layer-highlight: var(--clr-gray-20);
+	--clr-scrollbar: var(--clr-lighter-20);
 	--divider: var(--clr-lighter-40);
 	--container-border: 1px solid var(--clr-lighter-40);
 	--container-border-radius: 0;
@@ -115,6 +117,7 @@
 		--layer-container: var(--clr-gray-95);
 		--layer-container-hover: var(--clr-gray-100);
 		--layer-highlight: var(--clr-gray-80);
+		--clr-scrollbar: var(--clr-darker-20);
 		--divider: var(--clr-darker-20);
 		--container-border: none;
 		--container-border-radius: 0.25rem 2rem;
@@ -134,6 +137,7 @@
 		--layer-container: var(--clr-gray-20);
 		--layer-container-hover: var(--clr-gray-25);
 		--layer-highlight: var(--clr-gray-20);
+		--clr-scrollbar: var(--clr-lighter-20);
 		--divider: var(--clr-lighter-40);
 		--container-border: 1px solid var(--clr-lighter-40);
 		--container-border-radius: 0;
