--- a/static/global.css
+++ b/static/global.css
@@ -1,4 +1,4 @@
-@import 'normalize.css';
+@import 'reset.css';
 
 * {
 	box-sizing: border-box;
@@ -11,8 +11,7 @@
 		'Bitstream Charter', 'Nimbus Roman No9 L', Garamond, 'Apple Garamond',
 		'ITC Garamond Narrow', 'New Century Schoolbook', 'Century Schoolbook',
 		'Century Schoolbook L', Georgia, serif;
-	--font-stack-sans: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI,
-		Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
+	--font-stack-sans: 'IBM Plex Sans', system-ui, Segoe UI, Helvetica, Roboto,
 		sans-serif;
 	--font-stack-mono: 'IBM Plex Mono', monospace;
 
@@ -148,9 +147,10 @@
 
 html {
 	font-family: var(--font-stack-sans);
+	font-weight: 400;
 	font-size: 16px;
 	/* Used as basis for spacing throughout the app. */
-	line-height: 1.6;
+	line-height: 1.75;
 }
 
 .app {
@@ -224,6 +224,10 @@ td {
 th,
 td {
 	padding: 0.5rem 0.25rem;
+}
+
+strong {
+	font-weight: 500;
 }
 
 a {
