--- a/static/global.css
+++ b/static/global.css
@@ -141,7 +141,7 @@ h1 {
 
 h2 {
 	font-size: var(--font-size-30);
-	line-height: 1.4;
+	line-height: 1.5;
 }
 
 blockquote {
@@ -225,6 +225,11 @@ samp {
 	/* The monospace fonts tend to be optically larger for a given font size. */
 	/* font-size: 0.925em;
 	line-height: calc((1.5 / 0.875) / 0.925); */
+}
+
+small,
+.small {
+	font-size: var(--font-size-0);
 }
 
 .caption {
