--- a/static/global.css
+++ b/static/global.css
@@ -277,6 +277,13 @@ select {
 	appearance: none; */
 }
 
+select:focus {
+	outline: none;
+	border-color: var(--theme-primary);
+	box-shadow: 0 0 2px var(--theme-primary);
+	color: var(--theme-primary-text);
+}
+
 /*    HELPERS    */
 
 .inherit {
