--- a/static/global.css
+++ b/static/global.css
@@ -215,19 +215,31 @@ strong {
 	font-weight: 500;
 }
 
-a {
+button.link {
+	appearance: none;
+	background: none;
+	border: none;
+	outline: none;
+	padding: 0;
+	margin: 0;
+}
+
+a,
+.link {
 	color: var(--text-link);
 	text-decoration: none;
 	transition: color 0.33s;
 }
 
-a:hover {
+a:hover,
+.link:hover {
 	color: var(--text-link-hover);
 	cursor: pointer;
 	text-decoration: underline;
 }
 
 a,
+.link,
 .text-mono,
 pre,
 code,
@@ -249,7 +261,8 @@ small,
 	color: var(--text-secondary);
 }
 
-.text-mono a {
+.text-mono a,
+.text-mono .link {
 	font-size: 1em;
 	/* Avoid compounding ensmallnesses. */
 }
